z-index fix

--- a/site/web/app/themes/sage/resources/assets/styles/layouts/_header.scss
+++ b/site/web/app/themes/sage/resources/assets/styles/layouts/_header.scss
@@ -19,6 +19,7 @@
 
 .header {
 	position: fixed;
+	z-index: 5;
 	width: 100%;
 	.container {
 		display: flex;
